# celestial-roll

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: action.hpp  bezierAnimation.hpp  boxCollider.hpp  camera.hpp  collider.hpp  collisionDetector.hpp  collisionManager.hpp  debug.hpp  game.hpp  gameObject.hpp  gameState.hpp  globals.hpp  gravityComponent.hpp  inputHandler.hpp  inputObserver.hpp  interpolatedTransform.hpp  matrices.h  matrixUtils.hpp  mesh.hpp  objLoader.hpp  physicsObject.hpp  player.hpp  renderer.hpp  rigidBody.hpp  scene.hpp  shader.hpp  sphereCollider.hpp  texture.hpp  transform.hpp  utils.h
include/collision/: aabbCollider.hpp  boxCollider.hpp  collider.hpp  collisionDetector.hpp  collisionManager.hpp  obbCollider.hpp  sphereCollider.hpp
include/game/: component.hpp  componentType.hpp  game.hpp  gameObject.hpp  gameState.hpp  scene.hpp
include/graphics/: lightEmitter.hpp  material.hpp  materialManager.hpp  mesh.hpp  meshManager.hpp  mtlLoader.hpp  objLoader.hpp  renderManager.hpp  renderer.hpp  shader.hpp  shaderManager.hpp  texture.hpp
include/input/: action.hpp  inputHandler.hpp  inputObserver.hpp
include/math/: matrix.hpp  vector.hpp
include/objects/: camera.hpp  deathBox.hpp  debugAxis.hpp  duck.hpp  light.hpp  platform.hpp  player.hpp  skybox.hpp  star.hpp
include/physics/: gravityComponent.hpp  physicsMaterial.hpp  rigidBody.hpp
resources/materials/: default.mtl  ice.mtl  sphere.mtl
resources/shaders/: debug.frag  debug.vert  default.frag  default.vert  gouraud.frag  gouraud.vert  ice.frag  skybox.frag  skybox.vert  star.frag
src/: component.cpp  componentType.cpp  glad.c  main.cpp  renderer.cpp
src/shaders/: shader_fragment.glsl  shader_vertex.glsl
